--- a/package.json
+++ b/package.json
@@ -16,7 +16,16 @@
   },
   "homepage": "https://github.com/akgiri20/55_techArmy#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "ejs-mate": "^4.0.0",
+    "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "gsap": "^3.12.5",
+    "joi": "^17.12.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.1.3",
+    "passport": "^0.7.0",
+    "passport-local-mongoose": "^8.0.0",
     "three": "^0.161.0"
   },
   "description": "",
