--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "homepage": "https://akgiri20.github.io/TELEMED",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/akgiri20/55_techArmy.git"
+    "url": "git+https://github.com/akgiri20/TELEMED.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/akgiri20/55_techArmy/issues"
+    "url": "https://github.com/akgiri20/TELEMED.git/issues"
   },
-  "homepage": "https://github.com/akgiri20/55_techArmy#readme",
+  "homepage": "https://github.com/akgiri20/TELEMED.git#readme",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.15.3",
     "connect-flash": "^0.1.1",
